Tuning to Views and Index.js

--- a/Static/Views/Partials/header.ejs
+++ b/Static/Views/Partials/header.ejs
@@ -17,7 +17,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md sticky-top navbar-dark bg-dark">
-            <a class="navbar-brand mb-0 h1" href="#">Blog</a>
+            <a class="navbar-brand mb-0 h1" href="/">Blog</a>
 
             <button
                 class="navbar-toggler"
@@ -33,13 +33,14 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
+        <main>
