--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -1,4 +1,5 @@
 
+        </main>
         <!-- Bootstrap Scripts -->
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
