--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -1,5 +1,12 @@
 
         </main>
+
+        <footer>
+            Created by Suvigy Mishra    
+        </footer>
+
+
+
         <!-- Bootstrap Scripts -->
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
