--- a/Static/Views/Partials/header.ejs
+++ b/Static/Views/Partials/header.ejs
@@ -13,10 +13,11 @@
             integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
             crossorigin="anonymous"
         />
+        
         <link rel="stylesheet" href="../CSS/styles.css" />
     </head>
     <body>
-        <nav class="navbar navbar-expand-md sticky-top navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md sticky-top">
             <a class="navbar-brand mb-0 h1" href="/">Blog</a>
 
             <button
