--- a/Static/Views/about.ejs
+++ b/Static/Views/about.ejs
@@ -1,10 +1,16 @@
 <%- include('./Partials/header'); -%>
 
-<h1>About Page</h1>
+<h2>About</h2>
 
 <p>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores esse, modi nesciunt delectus enim doloribus
-    fuga ipsum beatae at, nostrum dignissimos alias, deserunt est atque eligendi deleniti minima? Excepturi, illo?
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
+    Lorem Ipsum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores esse, modi nesciunt delectus enim
+    doloribus fuga ipsum beatae at, nostrum dignissimos alias, deserunt est atque eligendi deleniti minima? Excepturi,
+    illo?
 </p>
 
 <%- include('./Partials/footer'); -%>
