Change to color scheme

--- a/Static/CSS/styles.css
+++ b/Static/CSS/styles.css
@@ -1,31 +1,27 @@
 /* Body */
 body {
-    background-color: #f9f7f7;
-}
-
-/* Header */
-
-nav {
-    background-color: #dbe2ef;
-}
-
-nav a {
-    color: #112d4e;
-}
-
-nav a:hover {
-    color: #2e8bc0;
-}
-
-.navbar-brand {
-    color: #112d4e;
+    background-color: #ffff;
 }
 
 /* Main Section */
 
 main {
-    padding: 20px 15px;
-    margin: 0px 0px 50px;
+    min-height: 640px;
+    padding: 30px;
+    margin: 0px 100px;
+}
+
+.title {
+    display: inline-block;
+    width: 30%;
+    margin: 0;
+}
+
+.createdAt {
+    display: inline-block;
+    width: 69%;
+    margin: auto;
+    text-align: right;
 }
 
 /* Compose Section */
@@ -43,8 +39,6 @@ main {
 /* Footer */
 
 footer {
-    background-color: #dbe2ef;
-    color: #112d4e;
     padding: 10px 25px;
     text-align: right;
     bottom: 0;
