--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -1,7 +1,7 @@
 
         </main>
 
-        <footer>
+        <footer class="bg-secondary text-light">
             Created by Suvigy Mishra    
         </footer>
 
