--- a/Static/Views/Partials/header.ejs
+++ b/Static/Views/Partials/header.ejs
@@ -13,12 +13,12 @@
             integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
             crossorigin="anonymous"
         />
-        
+
         <link rel="stylesheet" href="../CSS/styles.css" />
     </head>
     <body>
-        <nav class="navbar navbar-expand-md sticky-top">
-            <a class="navbar-brand mb-0 h1" href="/">Blog</a>
+        <nav class="navbar navbar-expand-md bg-secondary sticky-top">
+            <a class="navbar-brand mb-0 h1 text-light" href="/">Blog</a>
 
             <button
                 class="navbar-toggler"
@@ -35,13 +35,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link text-light" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                        <a class="nav-link text-light" href="/about">About</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <main>
+    <main class="bg-light">
