--- a/Static/Views/home.ejs
+++ b/Static/Views/home.ejs
@@ -1,17 +1,24 @@
-<%- include('./Partials/header'); -%> 
-
-<% if (posts.length != 0) {%>
+<%- include('./Partials/header'); -%> <% if (posts.length != 0) {%>
 <ul type="none">
     <% for (let i of posts) {%>
-    <li>
-        <h2 class="title"><%= i.title %></h2>
+    <li id="<%- i.id%>">    
+        <h3 class="title"><%= i.title %></h3>
         <p class="createdAt"><%= i.createdAt.toDateString() %></p>
+        <hr class="horizontalRule" />
         <p class="content"><%= i.content %></p>
+        <button value="<%- i.id%>" class="btn deleteBtn btn-danger">
+            Delete
+        </button>
+        <hr class="endSeprator" />
     </li>
     <% } %>
 </ul>
-<%} else {%> 
-    <h2>Ooops.. Nothing to see here!</h2>
-<%} %> 
-<%- include('./Partials/footer'); -%>
-
+<%} else {%>
+<h2>Ooops.. Nothing to see here!</h2>
+<%} %> <%- include('./Partials/footer'); -%>
+<script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+></script>
+<script src="../JS Script/delete.js"></script>
