--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -2,7 +2,13 @@
         </main>
 
         <footer class="bg-secondary text-light">
-            Created by Suvigy Mishra    
+            <form action="/compose" method="GET">
+                <button class="btn btn-primary btn-sm">
+                    New Post
+                </button>
+
+                <p>Created by Suvigy Mishra</p>
+            </form>
         </footer>
 
 
