--- a/Static/Views/home.ejs
+++ b/Static/Views/home.ejs
@@ -1,4 +1,6 @@
-<%- include('./Partials/header'); -%> <% if (posts.length != 0) {%>
+<%- include('./Partials/header'); -%> 
+
+<% if (posts.length != 0) {%>
 <ul type="none">
     <% for (let i of posts) {%>
     <li id="<%- i.id%>">    
@@ -15,10 +17,12 @@
 </ul>
 <%} else {%>
 <h2>Ooops.. Nothing to see here!</h2>
+
 <%} %> <%- include('./Partials/footer'); -%>
+
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"
 ></script>
-<script src="../JS Script/delete.js"></script>
+<script src="../JS/btn.js"></script>
