Small Edits to Looks

--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -3,7 +3,7 @@
 
         <footer class="bg-secondary text-light">
             <form action="/compose" method="GET">
-                <button class="btn btn-primary btn-sm">
+                <button class="btn btn-primary">
                     New Post
                 </button>
 
