--- a/Static/Views/Partials/header.ejs
+++ b/Static/Views/Partials/header.ejs
@@ -38,6 +38,9 @@
                         <a class="nav-link text-light" href="/">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-light" href="/signin">Sign In</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-light" href="/about">About</a>
                     </li>
                 </ul>
