Various edits to Views

--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -7,7 +7,7 @@
                     New Post
                 </button>
 
-                <p>Created by Suvigy Mishra</p>
+                <a class="nav-link text-light" href="/about">Created by Suvigy Mishra</a>
             </form>
         </footer>
 
