--- a/Static/Views/about.ejs
+++ b/Static/Views/about.ejs
@@ -2,15 +2,34 @@
 
 <h2>About</h2>
 
+<hr />
+
+<h5><i>A Blog Website made using express and MongoDB</i></h5>
 <p>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
-    Lorem Ipsum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores esse, modi nesciunt delectus enim
-    doloribus fuga ipsum beatae at, nostrum dignissimos alias, deserunt est atque eligendi deleniti minima? Excepturi,
-    illo?
+    A simple blogging website template made using <strong>Express</strong>.Js and <strong>mongoDB</strong> to store
+    data. An user can sign in to create and delete posts which can be viewed by other users. Posts can neither be
+    created nor be destroyed without user credentials.
 </p>
+<br />
+<h4>Features</h4>
+<hr />
+<ul>
+    <li>Addition and removal of blogs</li>
+    <li>Store Blogs permanently in a database</li>
+    <li>Sign In/Sign Up</li>
+    <li>User Authentication</li>
+</ul>
+<br />
+<h4>Tech Used</h4>
+<hr />
+<ul>
+    <li>Express</li>
+    <li>MongoDB</li>
+    <li>jQuery</li>
+    <li>EJS</li>
+    <li>Mongoose</li>
+    <li>Ajax</li>
+</ul>
+<br />
 
 <%- include('./Partials/footer'); -%>
