--- a/Static/Views/signup.ejs
+++ b/Static/Views/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('./Partials/header'); -%>
 
 <div class="signup-form">
-    <form action="/examples/actions/confirmation.php" method="post">
+    <form action="/signup" method="POST">
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
         <hr />
