--- a/Static/CSS/styles.css
+++ b/Static/CSS/styles.css
@@ -8,7 +8,7 @@ body {
 main {
     min-height: 640px;
     padding: 10px 30px;
-    margin: 0px 100px 30px;
+    margin: 0px 100px 40px;
 }
 
 .title {
@@ -64,14 +64,13 @@ footer {
     width: 100%;
 }
 
-footer form p {
-    margin: 3px;
+footer form a {
     float: right;
 }
 
 /* Sign In */
 
-.login-form {
+.signin-form {
     width: 340px;
     margin: 50px auto;
     font-size: 15px;
