--- a/Static/Views/signin.ejs
+++ b/Static/Views/signin.ejs
@@ -1,7 +1,7 @@
 <%- include('./Partials/header'); -%>
 
-<div class="login-form">
-    <form action="/examples/actions/confirmation.php" method="post">
+<div class="signin-form">
+    <form action="/signin" method="POST">
         <h2>Log in</h2>
         <p>Log in to access your account!</p>
         <hr />
