--- a/Static/Views/signin.ejs
+++ b/Static/Views/signin.ejs
@@ -6,10 +6,24 @@
         <p>Log in to access your account!</p>
         <hr />
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username" required="required" autocomplete="off" />
+            <input
+                type="text"
+                class="form-control"
+                name="email"
+                placeholder="Email"
+                required="required"
+                autocomplete="off"
+            />
         </div>
         <div class="form-group mb-4">
-            <input type="password" class="form-control" placeholder="Password" required="required" autocomplete="off" />
+            <input
+                type="password"
+                class="form-control"
+                name="password"
+                placeholder="Password"
+                required="required"
+                autocomplete="off"
+            />
         </div>
         <div class="form-group mb-4">
             <button type="submit" class="btn btn-primary">Log in</button>
