--- a/Static/Views/signup.ejs
+++ b/Static/Views/signup.ejs
@@ -5,48 +5,71 @@
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
         <hr />
-        <div class="form-group">
-            <div class="row">
-                <div class="col">
-                    <input
-                        type="text"
-                        class="form-control"
-                        name="first_name"
-                        placeholder="First Name"
-                        required="required"
-                    />
-                </div>
-                <div class="col">
-                    <input
-                        type="text"
-                        class="form-control"
-                        name="last_name"
-                        placeholder="Last Name"
-                        required="required"
-                    />
-                </div>
+        <div class="row form-group">
+            <div class="col">
+                <input
+                    id="fname"
+                    type="text"
+                    class="form-control"
+                    name="fname"
+                    placeholder="First Name"
+                    required="required"
+                    autocomplete="off"
+                />
+            </div>
+            <div class="col">
+                <input
+                    id="lname"
+                    type="text"
+                    class="form-control"
+                    name="lname"
+                    placeholder="Last Name"
+                    required="required"
+                    autocomplete="off"
+                />
             </div>
         </div>
         <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email" required="required" />
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Password" required="required" />
+            <input
+                id="email"
+                type="email"
+                class="form-control"
+                name="email"
+                placeholder="Email"
+                required="required"
+                autocomplete="off"
+            />
         </div>
         <div class="form-group">
             <input
+                id="password"
+                type="password"
+                class="form-control"
+                name="password"
+                placeholder="Password"
+                required="required"
+                autocomplete="off"
+            />
+        </div>
+        <div class="form-group">
+            <input
+                id="confirm_password"
                 type="password"
                 class="form-control"
                 name="confirm_password"
                 placeholder="Confirm Password"
                 required="required"
+                autocomplete="off"
             />
+            <p class="mt-3" id="message"></p>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Sign Up</button>
+            <button id="submitSignUp" type="submit" disabled class="btn btn-primary">Sign Up</button>
         </div>
     </form>
     <div class="hint-text">Already have an account? <a href="/signin">Login here</a></div>
 </div>
 
 <%- include('./Partials/footer'); -%>
+
+<script src="../JS/validation.js"></script>
