--- a/Static/Views/about.ejs
+++ b/Static/Views/about.ejs
@@ -18,6 +18,7 @@
     <li>Store Blogs permanently in a database</li>
     <li>Sign In/Sign Up</li>
     <li>User Authentication</li>
+    <li>Password Encryption/Decryption</li>
 </ul>
 <br />
 <h4>Tech Used</h4>
@@ -28,7 +29,9 @@
     <li>jQuery</li>
     <li>EJS</li>
     <li>Mongoose</li>
+    <li>mongoose-encryption</li>
     <li>Ajax</li>
+    <li>dotenv</li>
 </ul>
 <br />
 
