Updating Backend with better logic

--- a/Static/Views/about.ejs
+++ b/Static/Views/about.ejs
@@ -29,7 +29,7 @@
     <li>jQuery</li>
     <li>EJS</li>
     <li>Mongoose</li>
-    <li>mongoose-encryption</li>
+    <li>mongoose-session</li>
     <li>Ajax</li>
     <li>dotenv</li>
 </ul>
