--- a/Static/Views/home.ejs
+++ b/Static/Views/home.ejs
@@ -1,20 +1,19 @@
-<%- include('./Partials/header'); -%> 
-
-<% if (posts.length != 0) {%>
+<%- include('./Partials/header'); -%> <% if (posts.length != 0) {%>
 <ul type="none">
     <% for (let i of posts) {%>
-    <li id="<%- i.id%>">    
-        <h3 class="title"><%= i.title %></h3>
+    <li id="<%- i.id%>">
+        <h3 class="postTitle"><%= i.postTitle %></h3>
         <p class="createdAt">
-            <% var day = ["Sonday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];%> 
-            <% var month = ["January","February","March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];%> 
-            <%= day[i.createdAt.getDay()] + ", " + i.createdAt.getDate() + " " + month[i.createdAt.getMonth()]%> 
+            <% var day = ["Sonday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];%> <% var month
+            = ["January","February","March", "April", "May", "June", "July", "August", "September", "October",
+            "November", "December"];%> <%= day[i.createdAt.getDay()] + ", " + i.createdAt.getDate() + " " +
+            month[i.createdAt.getMonth()]%>
         </p>
         <hr class="horizontalRule" />
         <p class="content"><%= i.content %></p>
-        <button value="<%- i.id%>" class="btn deleteBtn btn-danger">
-            Delete
-        </button>
+        <hr class="horizontalRule" />
+
+        <button value="<%- i.id%>" class="btn deleteBtn btn-danger">Delete</button>
         <hr class="endSeprator" />
     </li>
     <% } %>
@@ -24,7 +23,6 @@
 <h2>Ooops.. Nothing to see here!</h2>
 
 <%} %> <%- include('./Partials/footer'); -%>
-
 
 <!-- Scripts for jquery and delete btn  -->
 <script
