--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -2,7 +2,7 @@
         </main>
 
         <footer class="bg-secondary text-light">
-            <form action="/compose" method="GET">
+            <form action="/new-post" method="GET">
                 <button class="btn btn-primary">
                     New Post
                 </button>
