--- a/Static/Views/signin.ejs
+++ b/Static/Views/signin.ejs
@@ -4,6 +4,7 @@
     <form action="/signin" method="POST">
         <h2>Log in</h2>
         <p>Log in to access your account!</p>
+        <%- include('./Partials/messages'); -%>
         <hr />
         <div class="form-group">
             <input
@@ -12,6 +13,7 @@
                 name="email"
                 placeholder="Email"
                 required="required"
+                value="<%= typeof email != 'undefined' ? email : '' %>"
                 autocomplete="off"
             />
         </div>
@@ -23,6 +25,7 @@
                 placeholder="Password"
                 required="required"
                 autocomplete="off"
+                value="<%= typeof password != 'undefined' ? password : '' %>"
             />
         </div>
         <div class="form-group mb-4">
