--- a/Static/Views/signup.ejs
+++ b/Static/Views/signup.ejs
@@ -1,75 +1,73 @@
 <%- include('./Partials/header'); -%>
-
 <div class="signup-form">
     <form action="/signup" method="POST">
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
+        <%- include('./Partials/messages'); -%>
         <hr />
         <div class="row form-group">
             <div class="col">
                 <input
-                    id="fname"
                     type="text"
                     class="form-control"
                     name="fname"
                     placeholder="First Name"
                     required="required"
                     autocomplete="off"
+                    value="<%= typeof fname != 'undefined' ? fname : '' %>"
                 />
             </div>
             <div class="col">
                 <input
-                    id="lname"
                     type="text"
                     class="form-control"
                     name="lname"
                     placeholder="Last Name"
                     required="required"
                     autocomplete="off"
+                    value="<%= typeof lname != 'undefined' ? lname : '' %>"
                 />
             </div>
         </div>
         <div class="form-group">
             <input
-                id="email"
                 type="email"
                 class="form-control"
                 name="email"
                 placeholder="Email"
                 required="required"
                 autocomplete="off"
+                value="<%= typeof email != 'undefined' ? email : '' %>"
             />
         </div>
         <div class="form-group">
             <input
-                id="password"
                 type="password"
                 class="form-control"
                 name="password"
                 placeholder="Password"
                 required="required"
                 autocomplete="off"
+                value="<%= typeof password != 'undefined' ? password : '' %>"
             />
         </div>
         <div class="form-group">
             <input
-                id="confirm_password"
                 type="password"
                 class="form-control"
                 name="confirm_password"
                 placeholder="Confirm Password"
                 required="required"
                 autocomplete="off"
+                value="<%= typeof confirm_password != 'undefined' ? confirm_password : '' %>"
             />
             <p class="mt-3" id="message"></p>
         </div>
         <div class="form-group">
-            <button id="submitSignUp" type="submit" disabled class="btn btn-primary">Sign Up</button>
+            <button id="submitSignUp" type="submit" class="btn btn-primary">Sign Up</button>
         </div>
     </form>
     <div class="hint-text">Already have an account? <a href="/signin">Login here</a></div>
 </div>
 
 <%- include('./Partials/footer'); -%>
-
-<script src="../JS/validation.js"></script>
