Edits to code for better usability

--- a/Static/Views/about.ejs
+++ b/Static/Views/about.ejs
@@ -18,18 +18,16 @@
     <li>Store Blogs permanently in a database</li>
     <li>Sign In/Sign Up</li>
     <li>User Authentication</li>
-    <li>Password Encryption/Decryption</li>
 </ul>
 <br />
 <h4>Tech Used</h4>
 <hr />
 <ul>
     <li>Express</li>
-    <li>MongoDB</li>
+    <li>Mongoose for MongoDB</li>
+    <li>EJSBootstrap</li>
+    <li>Passport</li>
     <li>jQuery</li>
-    <li>EJS</li>
-    <li>Mongoose</li>
-    <li>mongoose-session</li>
     <li>Ajax</li>
     <li>dotenv</li>
 </ul>
