--- a/Static/Views/Partials/footer.ejs
+++ b/Static/Views/Partials/footer.ejs
@@ -3,10 +3,11 @@
 
         <footer class="bg-secondary text-light">
             <form action="/new-post" method="GET">
+                <% if (typeof name != "undefined") {%>
                 <button class="btn btn-primary">
                     New Post
                 </button>
-
+                <% } %> 
                 <a class="nav-link text-light" href="/about">Created by Suvigy Mishra</a>
             </form>
         </footer>
