--- a/Static/Views/Partials/header.ejs
+++ b/Static/Views/Partials/header.ejs
@@ -35,14 +35,27 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <% if (typeof user != "undefined") {%>
-                        <a class="nav-link text-light"><%= user.fname + " " + user.lname %></a>
+                        <% if (typeof name != "undefined") {%>
+                        <div class="dropdown">
+                            <button
+                                class="btn btn-secondary dropdown-toggle"
+                                type="button"
+                                id="dropdownMenuButton"
+                                data-toggle="dropdown"
+                            >
+                                <%= name %>
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="/signout">Sign Out</a>
+                            </div>
+                        </div>
+
                         <% } else { %>
                         <a class="nav-link text-light" href="/signin">Sign In</a>
                         <% } %>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="/about">About</a>
